[gd_scene load_steps=5 format=3 uid="uid://b7ypfeo8f3h3y"]

[ext_resource type="Script" uid="uid://41dnrd7v5jmp" path="res://scenes/game/game.gd" id="1_0sr1o"]
[ext_resource type="Texture2D" uid="uid://bofhtac8n6os5" path="res://assets/images/game/game_bg.png" id="1_sul5r"]
[ext_resource type="AudioStream" uid="uid://chg8qc0btbfv1" path="res://assets/audio/music/ambience.ogg" id="2_7h61r"]
[ext_resource type="AudioStream" uid="uid://bbnpnh36tw7b3" path="res://assets/audio/sound_effects/tick.ogg" id="2_kelw5"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0sr1o")

[node name="ClockTick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_kelw5")

[node name="RandomSound" type="AudioStreamPlayer" parent="."]

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_7h61r")
autoplay = true

[node name="SoundTimer" type="Timer" parent="."]

[node name="GameDurationTimer" type="Timer" parent="."]
wait_time = 240.0
one_shot = true

[node name="HourTimer" type="Timer" parent="."]
wait_time = 240.0

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_sul5r")
expand_mode = 1

[node name="GameUI" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 15

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI"]
layout_mode = 2

[node name="Time" type="Label" parent="GameUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 1, 0.25, 1)
theme_override_font_sizes/font_size = 25
text = "12:00"

[connection signal="timeout" from="SoundTimer" to="." method="_on_sound_timer_timeout"]
[connection signal="timeout" from="GameDurationTimer" to="." method="_on_game_duration_timer_timeout"]
[connection signal="timeout" from="HourTimer" to="." method="_on_hour_timer_timeout"]
